--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Assunção Web</a></li>
                 <li><a href="#about" class="menu-btn">Sobre</a></li>
-                <li><a href="#services" class="menu-btn">Serviços</a></li>
-                <li><a href="#skills" class="menu-btn">Habilidades</a></li>
+                <li><a href="#services" class="menu-btn">Habilidades</a></li>
+                <li><a href="#skills" class="menu-btn">Certificados</a></li>
                 <li><a href="#teams" class="menu-btn">Projetos</a></li>
                 <li><a href="#contact" class="menu-btn">Contato</a></li>
             </ul>
