--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>Planejo e desenvolvo sites na internet, seja ele uma clinica, blog, escritório, restaurante, etc.</p>
+                        <p>Planejo e desenvolvo websites, seja ele uma clinica, blog, escritório, restaurante, etc.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Propaganda</div>
-                        <p>Gero tráfego para o site na internet, gerando cliques em canais pagos, como Google e Social Ads.</p>
+                        <p>Gero tráfego para o site, gerando cliques em canais pagos, como Google e Social Ads.</p>
                     </div>
                 </div>
                 <div class="card">
