--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="text">Sou um <span class="typing-2"></span></div>
                     <p>Você possui um negócio e quer divulgar ele na internet, com a 
                     possibilidade dos clientes entrarem em contato com você, seja por e-mail ou
-                    whatsapp? Ou talvez quer um desgin para o seu site de e-commerce? 
+                    whatsapp? Ou talvez quer um design para o seu site de e-commerce? 
                     Nesse caso, posso ajudar. Sou um Web Designer. Crio sites profissionais com design 
                     moderno e visando colocar seu negócio em evidência. Também atuo na divulgação
                     do mesmo, para aumentar a exposição e faturamento.
